--- a/final_project/src/main/resources/templates/login/login.html
+++ b/final_project/src/main/resources/templates/login/login.html
@@ -62,7 +62,7 @@ Inspirations:
           C-191.3,356.5-196.9,350.3-203.7,350.3L-203.7,350.3z"/>
         </svg>
         </label>
-        <input type="text" id="username_input" name="username" style="color:white" class="username-input" placeholder="Username"></input>
+        <input type="text" id="username_input" name="username" style="color:white" class="username-input" placeholder="Email"></input>
       </div>
       <div class="password-row row">
         <label for="password_input">
