--- a/final_project/src/main/resources/static/userMainLayout/css/style.css
+++ b/final_project/src/main/resources/static/userMainLayout/css/style.css
@@ -2,10 +2,10 @@
 .sidenav {
     height: 100%;
     width: 200px;
-    position: fixed;
+   /*  position: fixed;
     z-index: 1;
     top: 0;
-    left: 0;
+    left: 0; */
     background-color: #111;
     overflow-x: hidden;
     padding-top: 20px;
