--- a/final_project/src/main/resources/templates/user/text.html
+++ b/final_project/src/main/resources/templates/user/text.html
@@ -140,7 +140,7 @@
 										Poland <i class="fa fa-caret-down"></i>
 									</button>
 									<div class="dropdown-container">
-										<a th:href="@{/bets/soccer/1/1/1}">1st League</a> 
+										<a th:href="@{/bets/football/1/1/1}">1st League</a> 
 										<a href="#">2nd League</a> 
 										<a href="#">3rd League</a>
 									</div>
